--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class="row">
+  <div class="col-sm-6 col-sm-offset-3">
 <%= yield %>
-
+  </div>
+</div>
 </body>
 </html>
