--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,12 @@
 <%= form_for @task, remote: true do |f|   %>
-  <%= f.text_area  :description, placeholder: "Describe your task!" %>
- <br/>
-  <%= f.text_field :deadline, id: "datetimepicker1", placeholder: "When's it due?" %>
-  <br/>
-  <%= f.button :submit %>
+  <div class="form-group">
+    <%= f.text_area  :description, placeholder: "Describe your task!", class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.text_field :deadline, id: "datetimepicker1", placeholder: "When's it due?", class: "form-control" %>
+  </div>
+  <div class="form-group">
+    <%= f.button :Submit, class: "btn btn-primary" %>
+  </div>
 <% end %>
+
